galleroid.css
/* Mobile */

body {
    background-color: lightcoral;
}

#galleroid {
	display: flex;
  	justify-content: space-around;
    flex-flow: row wrap;
    flex-basis: auto;  
  	width: 100%;
    margin: 0 auto 0;
}

#galleroid * {
    box-sizing: border-box;
}

.galleroid-item,
.galleroid-picture-container,
.galleroid-title {
    transition: all 0.2s ease-in;
}

.galleroid-item.active,
.galleroid-picture-container.active,
.galleroid-title.active {
    transition: all 0.25s ease-out;
}

.galleroid-item-wrapper {
    height: 90vw;
    width: 100%;
    overflow: visible;
}

.galleroid-item {
    width: 60vw;
    margin: 20vw 20vw 0;
    border-width: 5vw 5vw 0;
    background-color: white;
    border-style: solid;
    border-color: white;
    border-radius: 2px;
    display: grid;
    grid-gap: 0px;
    grid-template-columns:  0       auto    0;
    grid-template-rows:     auto
                            15vw 
                            auto;  
    grid-template-areas: '  pic     pic     pic' 
                         '  prev    title   next' 
                         '  text    text    text';
    

    position: relative;
    padding: 0;
    z-index: 1;
}

.galleroid-item.active {
    width: 96vw;
    border-width: 2vw;
    border-radius: 4px;
    grid-template-columns:  10vw    auto    10vw;
    grid-template-rows:     auto
                            auto
                            auto;


    z-index: 10;
}

.galleroid-picture-container {
    width: 50vw;
    height: 50vw;
    background-color: grey;
    border-radius: 2px;
    margin: 0;
    cursor: pointer;
    grid-area: pic;
}

.galleroid-picture-container.active {
    width: 92vw;
    height: calc(100vh - 22vw - 126px);
    border-radius: 4px;
}

.galleroid-picture {
    display: none;
    object-fit: contain;
	margin: auto;
  	width: 100%;
  	height: 100%;
    border-radius: 4px;
    transition: all 0.2s ease-in;
}

.galleroid-picture.active {
    display: block;
    transition: all 0.25s ease-out;
    width: 80vw;
}

.galleroid-title {
    font-size: 1em;
    font-family: Arial, Helvetica, sans-serif;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
	background-color: none;
	text-align: center;
	max-width: 70vw;
	text-align: center;
    margin: auto;
    grid-area: title;
}

.galleroid-title.active {
    transform: scale(1.5);
}

.galleroid-previous-button,
.galleroid-next-button {
    display: none;
    width: 0;
    height: 10vw;
    border-radius: 4px;
    color: white;
    background-color: lightgrey;
    border: none;
    padding: 0;
    margin: 0;
    cursor: pointer;
}

.galleroid-previous-button.active,
.galleroid-next-button.active {
    display: block;
    width: 10vw;
    height: 10vw;
    margin: 2vw 0;
}

.galleroid-previous-button {
    grid-area: prev;
}

.galleroid-next-button {
    grid-area: next;
    justify-self: end;
}

.galleroid-text-container {
    display: none;
    width: 100%;
    height: 126px;
    grid-area: text;
}

.galleroid-text-container.active {
    display: block;
}

.galleroid-text {
    text-align: center;
    margin: 0;
    overflow: hidden;
    white-space: normal;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    max-height: 126px;
}

/* Tablet */

@media only screen and (min-width: 500px) {
    .galleroid-item-wrapper {
        height: 45vw;
        width: 50%;
    }

    .galleroid-item {
        width: 30vw;
        margin: 10vw;
        border-width: 2.5vw 2.5vw 0;
        grid-template-rows: auto
                            7.5vw
                            auto;
    }

    .galleroid-picture-container {
        width: 25vw;
        height: 25vw;
    }

    .galleroid-previous-button,
    .galleroid-next-button {
        height: 5vw;
        width: 5vw;
    }
}

/* Desktop */

@media only screen and (min-width: 750px) {
    .galleroid-item-wrapper {
        height: 22.5vw;
        width: 25%;
    }

    .galleroid-item {
        width: 15vw;
        margin: 5vw;
        border-width: 1.25vw 1.25vw 0;
        grid-template-rows: auto
                            3.75vw
                            auto;
    }

    .galleroid-picture-container {
        width: 12.5vw;
        height: 12.5vw;
    }

    .galleroid-previous-button,
    .galleroid-next-button {
        height: 2.5vw;
        width: 2.5vw;
    }
}

